Assignment2_Zhao_Duo/tests/automated/tests/bad/ScientificNotationLittleMinus-0Chomped.calc
a .0e- b 1.e- c 2.3e- d 34.5e- e 6.78e- f 99.99e- g 3e- h 76e-